Scala Common Enrich: added Adapter to pre-process Mandrill events (#1061)
Scala Hadoop Enrich: bumped to 0.11.0
Scala Hadoop Enrich: bumped Scala Common Enrich to 0.10.0 (#1223)
Scala Hadoop Enrich: added test job for PingdomAdapter (#1176)
Scala Hadoop Enrich: added test job for PagerdutyAdapter (#1175)
Scala Hadoop Enrich: added test job for MandrillAdapter (#1171)
StorageLoader: wrote JSON Path file for com.pingdom/incident_notify_of_close event (#1182)
StorageLoader: wrote JSON Path file for com.pingdom/incident_assign event (#1181)
StorageLoader: wrote JSON Path file for com.pagerduty/incident event (#1177)
StorageLoader: wrote JSON Path file for com.mandrill/message_sent event (#1059)
StorageLoader: wrote JSON Path file for com.mandrill/message_bounced event (#1058)
StorageLoader: wrote JSON Path file for com.mandrill/message_opened event (#1057)
StorageLoader: wrote JSON Path file for com.mandrill/message_marked_as_spam event (#1056)
StorageLoader: wrote JSON Path file for com.mandrill/message_delayed event (#1055)
StorageLoader: wrote JSON Path file for com.mandrill/message_soft_bounced event (#1054)
StorageLoader: wrote JSON Path file for com.mandrill/message_clicked event (#1053)
StorageLoader: wrote JSON Path file for com.mandrill/message_rejected event (#1052)
StorageLoader: wrote JSON Path file for com.mandrill/recipient_unsubscribed event (#1051)
Redshift: added Redshift DDL for a com.pingdom/incident_notify_of_close event (#1180)
Redshift: added Redshift DDL for a com.pingdom/incident_assign event (#1179)
Redshift: added Redshift DDL for a com.pagerduty/incident event (#1178)
Redshift: added Redshift DDL for a com.mandrill/message_sent event (#1050)
Redshift: added Redshift DDL for a com.mandrill/message_bounced event (#1049)
Redshift: added Redshift DDL for a com.mandrill/message_opened event (#1048)
Redshift: added Redshift DDL for a com.mandrill/message_marked_as_spam event (#1047)