@@ -14,6 +14,7 @@ Scala Hadoop Enrich: bumped Scala Common Enrich to 0.10.0 (#1223)
 Scala Hadoop Enrich: added test job for PingdomAdapter (#1176)
 Scala Hadoop Enrich: added test job for PagerdutyAdapter (#1175)
 Scala Hadoop Enrich: added test job for MandrillAdapter (#1171)
+Scala Hadoop Enrich: added test job for more relaxed payload_data schema matching (#1235)
 StorageLoader: wrote JSON Path file for com.pingdom/incident_notify_of_close event (#1182)
 StorageLoader: wrote JSON Path file for com.pingdom/incident_assign event (#1181)
 StorageLoader: wrote JSON Path file for com.pagerduty/incident event (#1177)
